feat(TAP-10699): optimize merge/join node performance